2007-08-31 14:30  Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/viewer3d/cad/ViewableCAD.java
	  src/org/jcae/viewer3d/fe/ViewableFE.java: Fix typos, replace
	  hightLight by highlight in all method names.

2007-08-31 13:58 Jan Kozusznik <jan.kozusznik@vsb.cz>

	* src/org/jcae/viewer3d/FPSBehavior.java: Fix call to
	firePropertyChangeListenerPropertyChange().
	* src/org/jcae/viewer3d/OEMMViewer.java: Do not build mesh
	adjacency by default.  Minor changes in meshCoord() to
	handle non-readable triangles.
	* src/org/jcae/viewer3d/bg/ViewableBG.java: New highlight()
	method.
	* src/org/jcae/viewer3d/OEMMBehavior.java: Many changes to implement
	LOD with 2 levels (fine and coarse meshes).

2007-07-16 11:43  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/TextureFitter.java,
	  src/org/jcae/viewer3d/test/TextureFitterTest.java: Allows
	  disabling projection normalisation. Reenable mipmapping.

2007-07-03 08:06  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: more fixes concerning
	  https://java3d.dev.java.net/issues/show_bug.cgi?id=233 (contrib
	  erwann)

2007-06-26 11:56  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: Fix ArrayIndexOutOfBound
	  exception when working with model clips

2007-06-25 15:09  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/DefaultColorMapper.java: Add min, max,
	  infinity getters

2007-06-14 12:25  Jerome Robert <jeromerobert@users.sourceforge.net>

	* build.properties, build.xml: Allow to do not build the OEMM
	  viewer

2007-06-07 09:44  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/cad/ViewableCAD.java: Allow to call
	  ViewableCAD.domainsChangedPerform with null

	* src/org/jcae/viewer3d/Palette.java: Fix
	  ArrayIndexOutOfBoundsException for negative group ids

2007-05-30 11:24:50  Denis Barbier <barbier@users.sourceforge.net>
